# selenium-scraper

./: config.py  requirements.txt  scraper.py  setup.cfg
scraper_pkg_Rem_G.egg-info/: PKG-INFO  SOURCES.txt
selenium_modules/: idontcareaboutcookies.crx
