[metadata]
name = scraper-pkg-Rem-G
version = 0.0.1
author = Rem-G
author_email = r.gosselin@pictia.io
description = A python selenium scraper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rem-G/selenium-scraper
project_urls =
    Bug Tracker = https://github.com/Rem-G/selenium-scraper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .